--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "back-end": "file:",
     "express": "^4.21.2"
   },
   "devDependencies": {
