--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "back-end": "file:",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
